add/remove buttons to content.component

--- a/grocerylist01/src/app/content/content.component.css
+++ b/grocerylist01/src/app/content/content.component.css
@@ -1,3 +1,18 @@
+ul {
+    list-style-type: none; 
+}
+
+button { 
+    font-size: 1.5em; 
+    background-color: #FFFFFF;
+    color: #707070;
+    margin-top: 1%; 
+}
+
+input[type="text"] {
+    width: 20%; 
+}
+
 #container {
 padding: 5% 15%; 
 }
@@ -5,3 +20,4 @@ padding: 5% 15%;
 #container ul li {
     font-size: 1.5em; 
 }
+
