--- a/grocerylist01/src/app/content/content.component.html
+++ b/grocerylist01/src/app/content/content.component.html
@@ -3,5 +3,8 @@
     <li>Milk</li>
     <li>Eggs</li>
     <li>Bacon</li>
+    <input type="text" class="form-control" placeholder="Food Item">
+    <button id="add" class="btn">Add</button>
+    <button id="remove" class="btn">Remove</button>
   </ul>
 </div>
