--- a/grocerylist01/src/app/content/content.component.html
+++ b/grocerylist01/src/app/content/content.component.html
@@ -1,8 +1,8 @@
 <div id="container">
   <ul>
-    <li>Milk</li>
-    <li>Eggs</li>
-    <li>Bacon</li>
+    <li><button class="btn favorite">+</button>Milk</li>
+    <li><button class="btn favorite">+</button>Eggs</li>
+    <li><button class="btn favorite">+</button>Bacon</li>
     <input type="text" class="form-control" placeholder="Food Item">
     <button id="add" class="btn">Add</button>
     <button id="remove" class="btn">Remove</button>
