--- a/grocerylist01/src/app/nav/nav.component.html
+++ b/grocerylist01/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a routerLink="/content">Grocery List</a></li>
+    <li><a routerLink="/favorite">Favorites</a></li>
   </ul>
 </nav>
+<router-outlet></router-outlet>
 
