Added database favorites

--- a/grocerylist01/src/app/favorite/favorite.component.html
+++ b/grocerylist01/src/app/favorite/favorite.component.html
@@ -1,5 +1,7 @@
 <div id="container">
-  <ul>
-    <li>Bacon<button id="remove" class="btn">Remove</button></li>
-  </ul>
+<ul>
+  <li *ngFor="let item of items | async">
+    <span>{{item.$value}}</span><span (click)="delete(item)">[x]</span>
+  </li>
+</ul>
 </div>
