--- a/grocerylist01/src/app/content/content.component.css
+++ b/grocerylist01/src/app/content/content.component.css
@@ -10,6 +10,10 @@ button {
     margin-top: 1%; 
 }
 
+span { 
+    margin-right: 0.5%;
+}
+
 .favorite {
     font-size: .5em;
     margin-top: 0; 
