--- a/grocerylist01/src/app/content/content.component.html
+++ b/grocerylist01/src/app/content/content.component.html
@@ -1,7 +1,7 @@
 <div id="container">
 <ul>
   <li *ngFor="let item of items | async">
-    <span>{{item.$value}}</span> <span (click)="delete(item)">[x]</span>
+    <span>{{item.$value}}</span><span (click)="favorite(item.$value)">[fav]</span><span (click)="delete(item)">[x]</span>
   </li>
 </ul>
 <h3>Grocery List:</h3>
