--- a/grocerylist01/src/app/favorite/favorite.component.css
+++ b/grocerylist01/src/app/favorite/favorite.component.css
@@ -1,5 +1,6 @@
 ul {
     list-style-type: none; 
+    padding: 0;
 }
 
 button { 
@@ -15,12 +16,4 @@ span {
 
 input[type="text"] {
     width: 20%; 
-}
-
-#container {
-padding: 5% 15%; 
-}
-
-#container ul li {
-    font-size: 1.5em; 
 }
