add Fav item back to list(database)

--- a/grocerylist01/src/app/favorite/favorite.component.html
+++ b/grocerylist01/src/app/favorite/favorite.component.html
@@ -2,7 +2,7 @@
   <h1>Favorites List</h1>
   <ul>
     <li *ngFor="let item of items | async">
-      <span>{{item.$value}}</span><span (click)="delete(item)">[x]</span>
+      <span>{{item.$value}}</span><span (click)="add(item.$value)">[add to list]</span><span (click)="delete(item)">[x]</span>
     </li>
   </ul>
 </div>
