--- a/grocerylist01/src/app/content/content.component.css
+++ b/grocerylist01/src/app/content/content.component.css
@@ -4,10 +4,10 @@ ul {
 }
 
 button { 
-    font-size: 1.5em; 
+    font-size: 1em; 
     background-color: #FFFFFF;
     color: #707070;
-    margin-top: 1%; 
+    margin: 0.5%; 
 }
 
 span { 
