--- a/grocerylist01/src/app/favorite/favorite.component.css
+++ b/grocerylist01/src/app/favorite/favorite.component.css
@@ -4,9 +4,10 @@ ul {
 }
 
 button { 
-    font-size: .5em; 
+    font-size: 1em; 
     background-color: #FFFFFF;
     color: #707070;
+    margin: 0.5%; 
 }
 
 span { 
