--- a/grocerylist01/src/app/content/content.component.html
+++ b/grocerylist01/src/app/content/content.component.html
@@ -1,10 +1,10 @@
 <div id="container">
-  <h1>Grocery Item</h1>
+  <h1>Grocery List</h1>
   <input type="text" class="form-control" [(ngModel)]="newItem" (keydown.enter)="add()" placeholder="item to add"/>
   <h1>Lists</h1>
   <ul>
     <li *ngFor="let item of items | async">
-      <span>{{item.$value}}</span><button class="btn" (click)="favorite(item.$value)">[fav]</button><button class="btn" (click)="delete(item)">[x]</button>
+      <button class="btn" (click)="favorite(item.$value)">[fav]</button><button class="btn" (click)="delete(item)">[x]</button><span>{{item.$value}}</span>
     </li>
   </ul>
 </div>
