Favorlist Component Blog

--- a/firebaseBlogPart2/src/app/content/content.component.html
+++ b/firebaseBlogPart2/src/app/content/content.component.html
@@ -3,9 +3,9 @@
 </h1>
 <input type="text" [(ngModel)]="newItem" (keydown.enter)="add()" placeholder="item to add"/>
   <ul>
-    <!-- This async pipe will allow us to use the observable
-         Then we use interpolation to acces display the item$value -->
+    <!-- passing the item.$value in order to pass the 
+         value to the favorite firebase observable -->
   <li *ngFor="let item of items | async">
-      <button (click)="delete(item)">[x]</button><span>{{item.$value}}</span>
+      <button (click)="favorite(item.$value)">[fav]</button><button (click)="delete(item)">[x]</button><span>{{item.$value}}</span>
     </li>
   </ul>
