--- a/firebaseBlogPart2/src/app/favorite/favorite.component.html
+++ b/firebaseBlogPart2/src/app/favorite/favorite.component.html
@@ -1,3 +1,6 @@
-<p>
-  favorite works!
-</p>
+<h1>Favorites List</h1>
+  <ul>
+    <li *ngFor="let item of items | async">
+      <button class="btn" (click)="add(item.$value)">[add to list]</button><button class="btn" (click)="delete(item)">[x]</button><span>{{item.$value}}</span>
+    </li>
+  </ul>
