--- a/grocerylist01/src/app/footer/footer.component.html
+++ b/grocerylist01/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-   <p>Grocery List Application &#169; 2016</p>
+   <p>Grocery List Application &#169; 2016 - {{currentYear}}</p>
 </footer>
