--- a/authentication/src/app/nav/nav.component.html
+++ b/authentication/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
 <nav>
   <ul>
     <li><a routerLink="/content">Grocery List</a></li>
+    <li *ngIf="!(af.auth | async)"><a (click)="login()">Log In</a></li>
+    <li *ngIf="(af.auth | async)"><a (click)="logout()">Log Out</a></li>
     <li><a routerLink="/favorite">Favorites</a></li>
   </ul>
 </nav>
