--- a/authentication/src/app/favorite/favorite.component.html
+++ b/authentication/src/app/favorite/favorite.component.html
@@ -1,6 +1,8 @@
 <div id="container">
-  <h1>Favorites List</h1>
-  <ul>
+  <h1 *ngIf="!(af.auth | async)">Grocery List</h1>
+  <h1 *ngIf="(af.auth | async)">Favorites List</h1>
+  <h3 *ngIf="!(af.auth | async)">Log In to start creating your own Grocery List!</h3>
+  <ul *ngIf="(af.auth | async)" >
     <li *ngFor="let item of items | async">
       <button class="btn" (click)="add(item.$value)">[add to list]</button><button class="btn" (click)="delete(item)">[x]</button><span>{{item.$value}}</span>
     </li>
