--- a/http/src/app/app.component.html
+++ b/http/src/app/app.component.html
@@ -1,13 +1,16 @@
-<h1>{{title}}</h1>
-<div *ngIf="users">
-  <div *ngFor="let user of users">
+<div class="container-fluid">
+  <div class="text-center">
+  <h1>{{title}}</h1>
+  <input #userData (keyup.enter)="processData(userData.value)">
+  </div>
+  <div class="col-md-3 col-sm-6" *ngFor="let user of users">
     <div *ngIf="user.show.name">Title: {{user.show.name}}<br></div>
     <div *ngIf="user.show.status">Still on the air: {{user.show.status}}<br></div>
     <div *ngIf="user.show.premiered">Premired date: {{user.show.premiered}}<br></div>
-    <div *ngIf="user.show.image.medium"><a [href]="user.show.url"><img [src]="user.show.image.medium"/></a></div>
-    <br>
+    <div><a [href]="user.show.url"><img *ngIf="user.show.image.medium" [src]="user.show.image.medium"/></a></div>
     <br>
     <br>
     <br>
   </div>
 </div>
+
