--- a/http/src/app/app.component.html
+++ b/http/src/app/app.component.html
@@ -10,12 +10,13 @@
   </div>
   <div class="col-md-3 col-sm-6 text-center" *ngFor="let user of users">
     <div *ngIf="user.show.name">Title: {{user.show.name}}<br></div>
+    <div *ngIf="!user.show.name">Title was not available.<br></div>
     <div *ngIf="user.show.status">Still on the air: {{user.show.status}}<br></div>
+    <div *ngIf="!user.show.status">Still on air data was not available.<br></div>
     <div *ngIf="user.show.premiered">Premired date: {{user.show.premiered}}<br></div>
     <div *ngIf="!user.show.premiered">Premiered Date was not available.<br></div>
     <div *ngIf="user.show.image"><a [href]="user.show.url"><img [src]="user.show.image.medium"/></a></div>
     <div *ngIf="!user.show.image"><br>Sorry, we do not have an image for this title.</div>
-    <br>
     <br>
     <br>
   </div>
