--- a/http/src/styles.css
+++ b/http/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.form-control {
+    width: 50%; 
+    margin: 0 auto; 
+}
