nav background color

--- a/http/src/app/nav/nav.component.html
+++ b/http/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid nav-background">
   <div class="text-center">
   <h1>{{title}}</h1>
   <h2>{{desciption}}</h2>
