--- a/http/src/app/content/content.component.html
+++ b/http/src/app/content/content.component.html
@@ -12,10 +12,12 @@
       <div *ngIf="!user.show.name">Title was not available.<br></div>
       <div *ngIf="user.show.status">Still on the air: {{user.show.status}}<br></div>
       <div *ngIf="!user.show.status">Still on air data was not available.<br></div>
+      <div *ngIf="user.show.type">Type: {{user.show.type}}<br></div>
+      <div *ngIf="!user.show.type">Type was not available.<br></div>
       <div *ngIf="user.show.premiered">Premired date: {{user.show.premiered}}<br></div>
       <div *ngIf="!user.show.premiered">Premiered Date was not available.<br></div>
       <div *ngIf="user.show.image"><a [href]="user.show.url"><img [src]="user.show.image.medium" [alt]="user.show.name"/></a></div>
-      <div *ngIf="!user.show.image"><br>Sorry, we do not have an image for this title.</div>
+      <div *ngIf="!user.show.image"><img src="./assets/notfound.jpg" alt="image not found"/></div>
       <br>
       <br>
     </div>
