--- a/ifelsethen/src/styles.css
+++ b/ifelsethen/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+img {
+    width: 50%; 
+}
+
+button {
+    margin: 1%; 
+    background-color: #FFF; 
+    border-radius: 95px; 
+    padding: 2%; 
+    font-size: 1.5rem; 
+}
+
+.container {
+    text-align: center; 
+}
