weather api call

--- a/ifelsethen/src/app/app.component.html
+++ b/ifelsethen/src/app/app.component.html
@@ -13,3 +13,7 @@
     <img src="./assets/sadday.jpg" alt="Dog having a bad day">
   </ng-template>
 </div>
+<div class="container">
+  <app-weather></app-weather>
+</div>
+
