--- a/services/src/app/second/second.component.html
+++ b/services/src/app/second/second.component.html
@@ -1,3 +1,5 @@
-<div *ngIf="show">
-  <img [src]="show.Poster" [alt]="show.Title"/>
+<div class="innercontainer">
+  <div *ngIf="show">
+    <img [src]="show.Poster" [alt]="show.Title" class="imgradius"/>
+  </div>
 </div>
