--- a/services/src/app/app.component.html
+++ b/services/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>
-  {{title}}
-</h1>
-<app-first></app-first>
-<app-second></app-second>
+<div class="container">
+  <h1>
+    {{title}}
+  </h1>
+  <app-first></app-first>
+  <app-second></app-second>
+</div>
