--- a/services/src/app/second/second.component.html
+++ b/services/src/app/second/second.component.html
@@ -1,4 +1,4 @@
-<div class="innercontainer">
+<div class="innercontainer floatright">
   <div *ngIf="show">
     <img [src]="show.Poster" [alt]="show.Title" class="imgradius"/>
   </div>
