--- a/services/src/styles.css
+++ b/services/src/styles.css
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+img { 
+    width: 60%; 
+    margin: 0; 
+    padding: 0; 
+}
+
 .container {
     margin: 0 auto; 
     width: 50%; 
@@ -9,9 +15,9 @@
 }
 
 .imgradius {
-    border-radius: 360px; 
+    border-radius: 15px; 
 }
 
 .floatright {
-    
+    float: right; 
 }
