--- a/services/src/app/first/first.component.html
+++ b/services/src/app/first/first.component.html
@@ -1,9 +1,13 @@
 <div *ngIf="show">
     <h1>{{show.Title}}</h1>
     <h3>Release Date: {{show.Released}}</h3>
+    <h3>Rated: {{show.Rated}}</h3>
     <h3>Actors: {{show.Actors}}</h3>
     <h3>Run Time: {{show.Runtime}}</h3>
-    <h3>IMDB Rating: {{show.imdbRating}} IMDB Votes: {{show.imdbVotes}}</h3>
+    <h3>Meta Score: {{show.Metascore}}</h3>
+    <h3>IMDB Rating: {{show.imdbRating}}</h3>
+    <h3>IMDB Votes: {{show.imdbVotes}}</h3>
+    <h2>Summary</h2>
         {{show.Plot}}
 </div>
-<button (click)="getShow()">Get Data</button>
+<!--<button (click)="getShow()">Get Data</button>-->
