--- a/grocerylist01/src/app/nav/nav.component.html
+++ b/grocerylist01/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li><a routerLink="/content">Grocery List</a></li>
+    <li><a routerLink="/ingredient">Recipe</a></li>
     <li><a routerLink="/favorite">Favorites</a></li>
   </ul>
 </nav>
