added firebase database

--- a/gps/src/app/content/content.component.html
+++ b/gps/src/app/content/content.component.html
@@ -1,2 +1,10 @@
 {{lat}} {{long}} {{changed}} <br>
 {{passedStopSign}}
+
+  <ul>
+    <li *ngFor="let item of items | async">
+      <button class="btn" (click)="delete(item)">[x]</button><span>{{item.$value}}</span>
+    </li>
+  </ul>
+  
+  <button (click)="processData()">Set Location</button>
