--- a/gps/src/styles.css
+++ b/gps/src/styles.css
@@ -10,14 +10,26 @@ ul {
 }
 
 button {
-    background-color: #ffffff;
-    padding: 0.5%; 
-    border-radius: 220px; 
+    border-radius: 15px; 
+    background-color: #37a9ef;
+    color: #FFF; 
+    padding: 0.4%; 
+    font-size: 1.1rem; 
+    border-color: #fff; 
+    border-width: 4px;  
+}
+
+button:active {
+    background-color: #ffffff; 
+    color: #4285f4;
+    border-color: #4285f4; 
 }
 
 input[type="text"] {
-    padding: 0.5%;
-    border-radius: 220px; 
+    padding: 0.4%;
+    border-radius: 15px; 
+    border-color: #fff; 
+    border-width: 4px; 
 }
 
 .setlocation {
