--- a/grocerylist01/src/app/ingredient/ingredient.component.css
+++ b/grocerylist01/src/app/ingredient/ingredient.component.css
@@ -14,6 +14,13 @@ button {
     background-color: #FFFFFF;
     color: #707070;
     margin: 3% 0.5%; 
+    border-color: #707070;
+    border-width: 4px; 
+}
+
+button:active { 
+    background-color: #4285f4;
+    color: #ffffff; 
 }
 
 span { 
