--- a/animations/src/app/app.component.css
+++ b/animations/src/app/app.component.css
@@ -6,3 +6,12 @@ h1 {
     text-align: center;
     align-content: center;
 }
+
+h2 {
+    background-color: orangered; 
+    margin: 5%; 
+    padding: 1% 0 1% 0%; 
+    color: #ffffff; 
+    text-align: center;
+    align-content: center;
+}
