--- a/animations/src/app/app.component.html
+++ b/animations/src/app/app.component.html
@@ -3,3 +3,7 @@
 <h1 [@homeAnim]="state" (mouseover)="stateAnim()" (mouseleave)="stateAnim()" (click)="processData()">
   {{title}}<span *ngIf="clickCount == 1">{{clickCount}} Time</span><span *ngIf="clickCount > 1">{{clickCount}} Times</span>
 </h1>
+
+<h2 [@otherButton]="otherState" (mouseover)="otherAnim()" (mouseleave)="otherAnim()">
+  {{otherTitle}}
+</h2>
