--- a/animations/src/app/app.component.css
+++ b/animations/src/app/app.component.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 h2 {
-    background-color: orangered; 
+    background-color: lightgreen; 
     margin: 5%; 
     padding: 1% 0 1% 0%; 
     color: #ffffff; 
