--- a/animations/src/app/app.component.html
+++ b/animations/src/app/app.component.html
@@ -7,3 +7,9 @@
 <h2 [@otherButton]="otherState" (mouseover)="otherAnim()" (mouseleave)="otherAnim()">
   {{otherTitle}}
 </h2>
+
+<h3>Palindrome RotateY</h3>
+
+<div class="center">
+  <button [@buttonAnim]="buttonstate" (mouseover)="buttonAnim()" (mouseleave)="buttonAnim()">stats</button>
+</div>
