--- a/tracker/src/app/week/week.component.html
+++ b/tracker/src/app/week/week.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let item of days | async">
-  <button (click)="add(item.$value)">+</button><button (click)="minus(item.$value)">-</button><span>Total: {{item.$value}}</span>
+<div *ngFor="let item of list | async" class="center">
+  <button (click)="add(item.$value)" class="greenbutton">+</button><button (click)="minus(item.$value)" class="redbutton">-</button><span class="fontlistitem">Total: {{item.$value}}</span>
 </div>  
