--- a/tracker/src/app/text/text.component.css
+++ b/tracker/src/app/text/text.component.css
@@ -28,3 +28,13 @@ button:active {
     background-color: #ffffff;
     border: 3px solid orangered;
 }
+
+input {
+    border: 5px solid white; 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 5px;
+    background: rgba(255,255,255,0.5);
+    margin: 0 0 10px 0;
+}
