--- a/tracker/src/app/text/text.component.css
+++ b/tracker/src/app/text/text.component.css
@@ -46,4 +46,22 @@ input {
     padding: 5px;
     background: rgba(255,255,255,0.5);
     margin: 0 0 10px 0;
+    text-align: center; 
+}
+
+textarea {
+    border: 5px solid white; 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 5px;
+    background: rgba(255,255,255,0.5);
+    margin: 0 0 10px 0;
+    text-align: center; 
+    width: 300px; 
+    height: 100px;   
+}
+
+.paddingtwo {
+    padding: 2%; 
 }
