added Wildcard route

--- a/grocerylist01/src/app/nav/nav.component.html
+++ b/grocerylist01/src/app/nav/nav.component.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li><a routerLink="/content">Grocery List</a></li>
-    <li><a routerLink="/ingredient">Recipe</a></li>
-    <li><a routerLink="/favorite">Favorites</a></li>
+    <li><a routerLink="content">Grocery List</a></li>
+    <li><a routerLink="ingredient">Recipe</a></li>
+    <li><a routerLink="favorite">Favorites</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
