--- a/grocerylist01/src/styles.css
+++ b/grocerylist01/src/styles.css
@@ -14,6 +14,10 @@ body, html {
     font-size: 1.5em; 
 }
 
+.centertext {
+    text-align: center; 
+}
+
 @media only screen and (max-width: 480px) {
     #container {
         padding: 5% 10%; 
