improve response design

--- a/grocerylist01/src/app/nav/nav.component.css
+++ b/grocerylist01/src/app/nav/nav.component.css
@@ -26,3 +26,9 @@ nav ul li {
 nav ul li a {
     color: #000;
 }
+
+@media only screen and (max-width: 355px) {
+    nav {
+        height: 75px;
+    }
+}
