--- a/grocerylist01/src/app/ingredient/ingredient.component.css
+++ b/grocerylist01/src/app/ingredient/ingredient.component.css
@@ -46,3 +46,10 @@ img {
 h4 {
     font-style: italic; 
 }
+
+@media only screen and (max-width: 950px) {
+    img {
+        width: 50%; 
+        padding: 2%; 
+    }  
+}
