--- a/grocerylist01/src/app/ingredient/ingredient.component.html
+++ b/grocerylist01/src/app/ingredient/ingredient.component.html
@@ -4,7 +4,7 @@
     <input type="text" class="form-control center" (keydown.enter)="getData()" [(ngModel)]="searchItem" placeholder="Enter a Ingredient"/>
     <div *ngFor="let food of recipe"> 
         <h2>{{food.title}}</h2>
-        <button class="btn" (click)="add(food.ingredients)">[add to list]</button><span>{{food.ingredients}}</span><br>
+        <button class="btn" (click)="add(food.ingredients)">[add to list]</button><br><span>{{food.ingredients}}</span><br><br>
         <a [href]="food.href"><img [src]="food.thumbnail"/></a>
     </div>
 </div>
