--- a/grocerylist01/src/app/ingredient/ingredient.component.html
+++ b/grocerylist01/src/app/ingredient/ingredient.component.html
@@ -1,10 +1,15 @@
 <div id="container">
       <h1>Go on, find your Dinner!</h1>
     <h4><a href="http://www.recipepuppy.com">Powered by, Recipe Puppy</a></h4>
+    <!--ngModel to use for two-way data binding to pass a value 
+    to the TypeScript file for use in an API call to Recipe Puppy -->
     <input type="text" class="form-control center" (keydown.enter)="getData()" [(ngModel)]="searchItem" placeholder="Enter a Ingredient"/>
+    <!--Use the response data from Recipe Puppy's API call  
+       -Button that passes the ingredients to be push to firebase database
+       -display an image with as link to the original recipe, opens in a new window-->
     <div *ngFor="let food of recipe"> 
         <h2>{{food.title}}</h2>
         <button class="btn" (click)="add(food.ingredients)">[add to list]</button><br><span>{{food.ingredients}}</span><br><br>
-        <a [href]="food.href"><img [src]="food.thumbnail"/></a>
+        <a [href]="food.href" target="_blank"><img [src]="food.thumbnail"/></a>
     </div>
 </div>
