--- a/chat/src/app/login/login.component.html
+++ b/chat/src/app/login/login.component.html
@@ -1,3 +1,7 @@
   <div> {{ (user | async)?.uid }} </div>
-  <button (click)="login()">Login</button>
-  <button (click)="logout()">Logout</button>
+  <button *ngIf="!(user | async)?.uid" (click)="login()">Login</button>
+  <button *ngIf="(user | async)?.uid" (click)="logout()">Logout</button>
+  <div *ngIf="(user | async)?.uid">
+      <p *ngFor="let item of items | async">{{item.$value}}</p>
+  </div>
+    <button *ngIf="(user | async)?.uid" (click)="data()">Click Me</button>
