--- a/chat/src/styles.css
+++ b/chat/src/styles.css
@@ -1,1 +1,42 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+    margin: 0; 
+    padding: 0; 
+}
+
+button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 0 4px 0.5%;
+    cursor: pointer;
+}
+
+input[type="text"] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 1% 2%;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 0.5%; 
+    width: fit-content;
+}
+
+input[type="text"]::-webkit-input-placeholder {
+    color: #fff; 
+}
+
+ul {
+    color: #fff;
+    width: fit-content;
+    background-color: #4CAF50; 
+    margin-left: 0.5%; 
+    padding: 0.5%; 
+    list-style-type: none; 
+    border-radius: 90px;
+}
